# LibreSudoku

./: README.md
sources/: classes.cpp
testing_ui/: CMakeLists.txt  main.cpp
